branches/wip/Archive/aca80b3ebce9d974e3ca9aff006755cf-c53c2eb46e73c13ea3799594603c1091/output
main.cpp:5:1: error: static_assert failed ""
static_assert(is_pointer<decltype(nullptr)>(), "");
^             ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
1 error generated.
